--- a/WPFSipBiteUnite/WPFSipBiteUnite.csproj
+++ b/WPFSipBiteUnite/WPFSipBiteUnite.csproj
@@ -8,12 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="panama.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="assets" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="panama.jpg" />
   </ItemGroup>
 
 </Project>
