--- a/WPFSipBiteUnite/WPFSipBiteUnite.csproj
+++ b/WPFSipBiteUnite/WPFSipBiteUnite.csproj
@@ -7,4 +7,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FontAwesome.Sharp" Version="6.3.0" />
+  </ItemGroup>
+
 </Project>
