--- a/WPFSipBiteUnite/WPFSipBiteUnite.csproj
+++ b/WPFSipBiteUnite/WPFSipBiteUnite.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="FontAwesome.Sharp" Version="6.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="7.0.5" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
