Resolve all warnings and errors. Add documentation to files.

--- a/WPFSipBiteUnite/WPFSipBiteUnite.csproj
+++ b/WPFSipBiteUnite/WPFSipBiteUnite.csproj
@@ -5,7 +5,12 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+	<NoWarn>$(NoWarn);8622</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FontAwesome.Sharp" Version="6.3.0" />
